@@ -10,8 +10,8 @@ import org.uma.jmetal.problem.doubleproblem.impl.AbstractDoubleProblem;
 import org.uma.jmetal.solution.doublesolution.DoubleSolution;
 import org.uma.jmetal.solution.doublesolution.impl.DefaultDoubleSolution;
 import org.uma.jmetal.solution.util.repairsolution.impl.RepairDoubleSolutionWithBoundValue;
-import org.uma.jmetal.util.errorchecking.JMetalException;
 import org.uma.jmetal.util.bounds.Bounds;
+import org.uma.jmetal.util.errorchecking.JMetalException;
 import org.uma.jmetal.util.errorchecking.exception.InvalidConditionException;
 import org.uma.jmetal.util.errorchecking.exception.NullParameterException;
 import org.uma.jmetal.util.pseudorandom.JMetalRandom;
@@ -151,13 +151,13 @@ public class BLXAlphaCrossoverTest {
 
     Bounds<Double> bounds0 = solutions.get(0).getBounds(0);
     Bounds<Double> bounds1 = solutions.get(1).getBounds(0);
-    assertThat(newSolutions.get(0).getVariable(0), Matchers
+    assertThat(newSolutions.get(0).variables().get(0), Matchers
         .greaterThanOrEqualTo(bounds0.getLowerBound())) ;
-    assertThat(newSolutions.get(0).getVariable(0), Matchers
+    assertThat(newSolutions.get(0).variables().get(0), Matchers
         .lessThanOrEqualTo(bounds1.getUpperBound())) ;
-    assertThat(newSolutions.get(1).getVariable(0), Matchers
+    assertThat(newSolutions.get(1).variables().get(0), Matchers
         .lessThanOrEqualTo(bounds0.getUpperBound())) ;
-    assertThat(newSolutions.get(1).getVariable(0), Matchers
+    assertThat(newSolutions.get(1).variables().get(0), Matchers
         .greaterThanOrEqualTo(bounds1.getLowerBound())) ;
     verify(randomGenerator, times(3)).getRandomValue();
   }
@@ -175,15 +175,15 @@ public class BLXAlphaCrossoverTest {
     DoubleProblem problem = new MockDoubleProblem(1) ;
     List<DoubleSolution> solutions = Arrays.asList(problem.createSolution(),
         problem.createSolution()) ;
-    solutions.get(0).setVariable(0, 1.0);
-    solutions.get(1).setVariable(0, 1.0);
+    solutions.get(0).variables().set(0, 1.0);
+    solutions.get(1).variables().set(0, 1.0);
 
     ReflectionTestUtils.setField(crossover, "randomGenerator", randomGenerator);
 
     List<DoubleSolution> newSolutions = crossover.execute(solutions) ;
 
-    assertEquals(solutions.get(0).getVariable(0), newSolutions.get(0).getVariable(0), EPSILON) ;
-    assertEquals(solutions.get(1).getVariable(0), newSolutions.get(1).getVariable(0), EPSILON) ;
+    assertEquals(solutions.get(0).variables().get(0), newSolutions.get(0).variables().get(0), EPSILON) ;
+    assertEquals(solutions.get(1).variables().get(0), newSolutions.get(1).variables().get(0), EPSILON) ;
     verify(randomGenerator, times(3)).getRandomValue();
   }
 
@@ -200,10 +200,10 @@ public class BLXAlphaCrossoverTest {
     DoubleProblem problem = new MockDoubleProblem(2) ;
     DoubleSolution solution1 = problem.createSolution() ;
     DoubleSolution solution2 = problem.createSolution() ;
-    solution1.setVariable(0, 1.0);
-    solution1.setVariable(1, 2.0);
-    solution2.setVariable(0, 2.0);
-    solution2.setVariable(1, 1.0);
+    solution1.variables().set(0, 1.0);
+    solution1.variables().set(1, 2.0);
+    solution2.variables().set(0, 2.0);
+    solution2.variables().set(1, 1.0);
     List<DoubleSolution> solutions = Arrays.asList(solution1, solution2) ;
 
     ReflectionTestUtils.setField(crossover, "randomGenerator", randomGenerator);
@@ -212,21 +212,21 @@ public class BLXAlphaCrossoverTest {
 
     Bounds<Double> bounds0 = solutions.get(0).getBounds(0);
     Bounds<Double> bounds1 = solutions.get(1).getBounds(0);
-    assertThat(newSolutions.get(0).getVariable(0), Matchers
+    assertThat(newSolutions.get(0).variables().get(0), Matchers
         .greaterThanOrEqualTo(bounds0.getLowerBound())) ;
-    assertThat(newSolutions.get(0).getVariable(0), Matchers
+    assertThat(newSolutions.get(0).variables().get(0), Matchers
         .lessThanOrEqualTo(bounds1.getUpperBound())) ;
-    assertThat(newSolutions.get(1).getVariable(0), Matchers
+    assertThat(newSolutions.get(1).variables().get(0), Matchers
         .lessThanOrEqualTo(bounds0.getUpperBound())) ;
-    assertThat(newSolutions.get(1).getVariable(0), Matchers
+    assertThat(newSolutions.get(1).variables().get(0), Matchers
         .greaterThanOrEqualTo(bounds1.getLowerBound())) ;
-    assertThat(newSolutions.get(0).getVariable(1), Matchers
+    assertThat(newSolutions.get(0).variables().get(1), Matchers
         .greaterThanOrEqualTo(bounds0.getLowerBound())) ;
-    assertThat(newSolutions.get(0).getVariable(1), Matchers
+    assertThat(newSolutions.get(0).variables().get(1), Matchers
         .lessThanOrEqualTo(bounds1.getUpperBound())) ;
-    assertThat(newSolutions.get(1).getVariable(1), Matchers
+    assertThat(newSolutions.get(1).variables().get(1), Matchers
         .lessThanOrEqualTo(bounds0.getUpperBound())) ;
-    assertThat(newSolutions.get(1).getVariable(1), Matchers
+    assertThat(newSolutions.get(1).variables().get(1), Matchers
         .greaterThanOrEqualTo(bounds1.getLowerBound())) ;
     verify(randomGenerator, times(5)).getRandomValue();
   }
@@ -256,8 +256,8 @@ public class BLXAlphaCrossoverTest {
     /** Evaluate() method */
     @Override
     public DoubleSolution evaluate(DoubleSolution solution) {
-      solution.setObjective(0, 0.0);
-      solution.setObjective(1, 1.0);
+      solution.objectives()[0] = 0.0;
+      solution.objectives()[1] = 1.0;
 
       return solution ;
     }
@@ -270,7 +270,7 @@ public class BLXAlphaCrossoverTest {
 		int alpha = 20;
 		RepairDoubleSolutionWithBoundValue solutionRepair = new RepairDoubleSolutionWithBoundValue();
 
-    List<Bounds<Double>> bounds = Arrays.asList(Bounds.create(0.0, 1.0)) ;
+    List<Bounds<Double>> bounds = List.of(Bounds.create(0.0, 1.0)) ;
 
 		List<DoubleSolution> solutions = new LinkedList<>();
 		solutions.add(new DefaultDoubleSolution(2, bounds));
