@@ -2,8 +2,9 @@ package org.uma.jmetal.operator.selection;
 
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.uma.jmetal.operator.selection.impl.BinaryTournamentSelection;
+import org.uma.jmetal.problem.doubleproblem.DoubleProblem;
+import org.uma.jmetal.problem.doubleproblem.impl.DummyDoubleProblem;
 import org.uma.jmetal.solution.Solution;
 import org.uma.jmetal.solution.doublesolution.DoubleSolution;
 import org.uma.jmetal.util.errorchecking.exception.EmptyCollectionException;
@@ -17,7 +18,6 @@ import java.util.List;
 
 import static junit.framework.TestCase.assertNotNull;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 import static org.mockito.Mockito.*;
 
@@ -29,60 +29,57 @@ public class BinaryTournamentSelectionTest {
 
   @Test
   public void shouldExecuteRaiseAnExceptionIfTheListOfSolutionsIsNull() {
-    BinaryTournamentSelection<Solution<Object>> selection = new BinaryTournamentSelection<Solution<Object>>() ;
-    assertThrows(NullParameterException.class, () -> selection.execute(null)) ;
+    BinaryTournamentSelection<Solution<Object>> selection =
+        new BinaryTournamentSelection<Solution<Object>>();
+    assertThrows(NullParameterException.class, () -> selection.execute(null));
   }
 
   @Test
   public void shouldExecuteRaiseAnExceptionIfTheListOfSolutionsIsEmpty() {
-    BinaryTournamentSelection<Solution<Object>> selection = new BinaryTournamentSelection<Solution<Object>>() ;
-    assertThrows(EmptyCollectionException.class, () -> selection.execute(new ArrayList<>(0))) ;
+    BinaryTournamentSelection<Solution<Object>> selection =
+        new BinaryTournamentSelection<Solution<Object>>();
+    assertThrows(EmptyCollectionException.class, () -> selection.execute(new ArrayList<>(0)));
   }
 
   @Test
   public void shouldExecuteReturnAValidSolutionIsWithCorrectParameters() {
-	  @SuppressWarnings("unchecked")
-    Solution<Object> solution1 = Mockito.mock(Solution.class) ;
-    Solution<Object> solution2 = Mockito.mock(Solution.class) ;
-    Solution<Object> solution3 = Mockito.mock(Solution.class) ;
+    @SuppressWarnings("unchecked")
+    DoubleProblem problem = new DummyDoubleProblem(2, 2, 0);
 
-    List<Solution<Object>> population = List.of(solution1, solution2, solution3) ;
+    var solution1 = problem.createSolution();
+    var solution2 = problem.createSolution();
+    var solution3 = problem.createSolution();
 
-    BinaryTournamentSelection<Solution<Object>> selection = new BinaryTournamentSelection<Solution<Object>>() ;
+    List<DoubleSolution> population = List.of(solution1, solution2, solution3);
+
+    BinaryTournamentSelection<DoubleSolution> selection = new BinaryTournamentSelection<>();
     assertNotNull(selection.execute(population));
   }
 
   @Test
   public void shouldExecuteRaiseAnExceptionIfTheListContainsOneSolution() {
-	  @SuppressWarnings("unchecked")
-	  Solution<Object> solution = mock(Solution.class) ;
-
-    assertThrows(InvalidConditionException.class, () -> new BinaryTournamentSelection<Solution<Object>>().execute(List.of(solution))) ;
-  }
-
-  @Test
-  public void shouldExecuteReturnTwoSolutionsIfTheListContainsTwoSolutions() {
     @SuppressWarnings("unchecked")
-    Solution<Object> solution1 = mock(Solution.class) ;
-    @SuppressWarnings("unchecked")
-    Solution<Object> solution2 = mock(Solution.class) ;
+    Solution<Object> solution = mock(Solution.class);
 
-    assertEquals(2, Arrays.asList(solution1, solution2));
+    assertThrows(
+        InvalidConditionException.class,
+        () -> new BinaryTournamentSelection<Solution<Object>>().execute(List.of(solution)));
   }
 
   @Test
   public void shouldExecuteWorkProperlyIfTheTwoSolutionsInTheListAreNondominated() {
-    Comparator<DoubleSolution> comparator = mock(Comparator.class) ;
+    Comparator<DoubleSolution> comparator = mock(Comparator.class);
 
-    DoubleSolution solution1 = mock(DoubleSolution.class) ;
-    DoubleSolution solution2 = mock(DoubleSolution.class) ;
+    DoubleSolution solution1 = mock(DoubleSolution.class);
+    DoubleSolution solution2 = mock(DoubleSolution.class);
 
     List<DoubleSolution> population = Arrays.<DoubleSolution>asList(solution1, solution2);
 
-    BinaryTournamentSelection<DoubleSolution> selection = new BinaryTournamentSelection<DoubleSolution>(comparator) ;
+    BinaryTournamentSelection<DoubleSolution> selection =
+        new BinaryTournamentSelection<DoubleSolution>(comparator);
     DoubleSolution result = selection.execute(population);
 
-    assertThat(result, Matchers.either(Matchers.is(solution1)).or(Matchers.is(solution2))) ;
+    assertThat(result, Matchers.either(Matchers.is(solution1)).or(Matchers.is(solution2)));
     verify(comparator).compare(any(DoubleSolution.class), any(DoubleSolution.class));
   }
 }
